--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -191,8 +191,8 @@
           <br>
 
           <label class="col-md-8 fs-5"></label>
-          <label for="define_model" class="btn btn-primary btn-lg">Train</label>
-          <input type="submit" id="define_model" class="btn btn-primary btn-lg" formaction="/pipeline/model/scenario/1" hidden>
+          <label for="define_model" class="btn btn-outline-primary btn-lg">Train</label>
+          <input type="submit" id="define_model" class="btn btn-outline-primary btn-lg" formaction="/pipeline/model/scenario/1" hidden>
 
           <br><br>
 
