--- a/templates/service.html
+++ b/templates/service.html
@@ -155,8 +155,8 @@
           <br>
 
           <label class="col-md-8 fs-5"></label>
-          <label for="inference" class="btn btn-primary btn-lg">Inference</label>
-          <input type="submit" id="inference" class="btn btn-primary btn-lg" hidden>
+          <label for="inference" class="btn btn-outline-primary btn-lg">Inference</label>
+          <input type="submit" id="inference" class="btn btn-outline-primary btn-lg" hidden>
         
           <br><br>
 
