--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -96,7 +96,8 @@
         -webkit-overflow-scrolling: touch;
       }
       select {
-            width: 183px;
+            width: 173px;
+            height: 43px;
 
       }
     </style>
@@ -121,40 +122,89 @@
       </a>
     </header>
 
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Email address</label>
+    </div>
+
     <div class="p-5 mb-1 bg-light rounded-5">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
         <p class="col-md-8 fs-5">Define your own SLFN and train.</p> 
         <br><br>
+
         
         <form  method="post" enctype="multipart/form-data">
 
-          <!-- <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
+          <div class="row">
+            <div class="col-md-2">
+              <!-- <div class="d-flex align-items-center justify-content-center"> -->
+              <div class="row align-items-start">
+
+                <div class="btn-group-toggle" data-toggle="buttons">
+
+                    <div class="btn-group" role="group" aria-label="Basic example" >
+
+                      <button type="button" class="btn btn-outline-primary">Enable</button>
+                      <button type="button" class="btn btn-outline-primary">Disable</button>
+
+                    </div>
+                    
+                </div>
+                
+              </div>
             </div>
-          </div> -->
-          
+
+            <div class="col-md-10">
+              <div class="h-100 p-5 bg-light border rounded-3">
+                
+              <label class="col-md-8 fs-4">Select Data directory from Server.</label>
+              <select class="form-select-lg mb-1" name="dataDirectory" method="GET"  style="font-size:20px;" >  <!-- select 也可以配 action -->
+                {% for dataDir in upload_data %}
+                <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
+                {% endfor %}
+              </select>
+              <br><br>
+              <label class="col-md-8 fs-5">Data descirbing</label>
+              <select class="form-select-lg mb-1" name="dataDescribing" method="GET"  style="font-size:20px;" > 
+                <option value= "ri_sro" SELECTED>ri_sro</option>
+                <option value= "ri_mro" >ri_mro</option>
+                <option value= "bi_sro" >bi_sro</option>
+                <option value= "bi_mro" >bi_mro</option>
+                <option value= "ri_sbo" >ri_sbo</option>
+                <option value= "ri_mbo" >ri_mbo</option>
+                <option value= "bi_sbo" >bi_sbo</option>
+                <option value= "bi_mbo" >bi_mbo</option>
+              </select>
+
+              </div>
+            </div>
+            
+          </div>
+    
+
+          <br>
+
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
+
+              <label class="col-md-8 fs-4">SLFN(Two Layer).</label>
+              <label class="col-md-8 fs-5">---Training---</label>
               
-            <label class="col-md-8 fs-4">Select Data directory from Server.</label>
-            <select name="dataDirectory" method="GET"  style="font-size:20px;" >  <!-- select 也可以配 action -->
-              {% for dataDir in upload_data %}
-              <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
-              {% endfor %}
-            </select>
-            <br><br>
-            <label class="col-md-8 fs-5">Data descirbing</label>
-            <select name="dataDescribing" method="GET"  style="font-size:20px;" > 
-              <option value= "ri_sro" SELECTED>ri_sro</option>
-              <option value= "ri_mro" >ri_mro</option>
-              <option value= "bi_sro" >bi_sro</option>
-              <option value= "bi_mro" >bi_mro</option>
-              <option value= "ri_sbo" >ri_sbo</option>
-              <option value= "ri_mbo" >ri_mbo</option>
-              <option value= "bi_sbo" >bi_sbo</option>
-              <option value= "bi_mbo" >bi_mbo</option>
-            </select>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
+                <label for="floatingInput">Hidden node</label>
+              </div>
+
+              <!-- <label class="col-md-8 fs-5">Hidden node</label>
+              <input class="form-control-sm" class="form-control-sm" type="text" id="Hyperparameters" name="hiddenNode" > -->
+              <label class="col-md-8 fs-5">Activation function</label>
+              <select class="form-select-lg mb-1" id="select_activationFunction" name="activationFunction" method="GET"  style="font-size:20px;"> 
+                <option value= "ReLU" SELECTED>ReLU</option>
+              </select>
+              <label class="col-md-8 fs-5">---Evaluating---</label>
+              <label class="col-md-8 fs-5">Threshold for error</label>
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="thresholdForError" >
 
             </div>
           </div>
@@ -163,24 +213,15 @@
 
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
-              <div id = "module_2LayerNet">
-              <label class="col-md-8 fs-4">SLFN(Two Layer).</label>
-              <label class="col-md-8 fs-5">Hidden node</label>
-              <input type="text" id="Hyperparameters" name="hiddenNode" >
-              <label class="col-md-8 fs-5">Activation function</label>
-              <select id="select_activationFunction" name="activationFunction" method="GET"  style="font-size:20px;"> 
-                <option value= "ReLU" SELECTED>ReLU</option>
-              </select>
 
-              <br><br>
-              <label class="col-md-8 fs-4">Back Propagation.</label>
-              <label class="col-md-8 fs-5">Loss function</label>
-              <select id="select_loss" name="lossFunction" method="GET"  style="font-size:20px;" onclick="showLossFunctionEquation()"> 
+              <label class="col-md-8 fs-4">Matching(Back Propagation).</label>
+              <label class="col-md-8 fs-5">---Loss function---</label>
+              <select class="form-select-lg mb-1" id="select_loss" name="lossFunction" method="GET"  style="font-size:20px;" onclick="showLossFunctionEquation()"> 
                 <option value= "RMSE" SELECTED>RMSE</option>
                 <option value= "MSE" >MSE</option>
                 <option value= "CROSSENTROPYLOSS" >CROSSENTROPYLOSS</option>
               </select>
-              
+
               <div>
                 <label class="col-md-8 fs-5">Function equation</label>
                 <p id="MSE" style="display:none"><span class="math display">\[MSE=\frac{1}{n}\sum_{i=1}^{n}(\hat{y_i}-y_i)^2\]</span ></p>
@@ -188,28 +229,55 @@
                 <p id="CROSSENTROPYLOSS_b" style="display:none"><span class="math display">\[CrossEntropyLoss(binary)=-{(y\log(p) + (1 - y)\log(1 - p))}\]</span ></p>
                 <p id="CROSSENTROPYLOSS_m" style="display:none"><span class="math display">\[CrossEntropyLoss(multiclass)=-\sum_{c=1}^My_{o,c}\log(p_{o,c})\]</span ></p>
               </div>
-              <br>
-              <label class="col-md-8 fs-4">Optimizer</label>
-              <select name="optimizer" method="GET"  style="font-size:20px;" onclick="showOptimizerParameters()" > 
+
+              <br><br>
+
+              <label class="col-md-8 fs-5">---Optimizer---</label>
+              <select class="form-select-lg mb-1" name="optimizer" method="GET"  style="font-size:20px;" onclick="showOptimizerParameters()" > 
                 <option value= "Adam" SELECTED>Adam</option>
                 <option value= "AdamW" >AdamW</option>
               </select>
 
               <label class="col-md-8 fs-5">Learning rate</label>
-              <input type="text" id="Hyperparameters" name="learningRate" >
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="learningRate" >
               <label class="col-md-8 fs-5">Betas</label>
-              <input type="text" id="Hyperparameters" name="betas" >
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="betas" >
               <label class="col-md-8 fs-5">Eps</label>
-              <input type="text" id="Hyperparameters" name="eps" >
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="eps" >
               <label class="col-md-8 fs-5">Weight decay</label>
-              <input type="text" id="Hyperparameters" name="weightDecay" >
-              <label class="col-md-8 fs-5">Epoch upper bound</label>
-              <input type="text" id="Hyperparameters" name="matchingTimes"  >
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="weightDecay" >
+              
+              <br><br>
+              
+              <label class="col-md-8 fs-5">---Rule---</label>
+              <select class="form-select-lg mb-1" id="select_matchingRule" name="matchingRule" method="GET" style="font-size:20px;" onclick="showMatchingParameters()"> 
+                <option value= "EU" >EU</option>
+                <option value= "EU_LG" >EU_LG</option>
+                <option value= "EU_LG_UA" >EU_LG_UA</option>
+                <option value= "Disabled" SELECTED>Disabled</option>
+              </select>
+
+              
+              <p id = "p_matchingTimes" style="display:none;margin:0;">
+              <label class="col-md-8 fs-5">Matching times</label>
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingTimes"  >
+              </p> 
+
+              <p id = "p_matchingLearningGoal" style="display:none;margin:0;">
+              <label class="col-md-8 fs-5">Matching learning goal</label>
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingLearningGoal"  >
+              </p> 
+
+              <p id = "p_matchingLearningRateLowerBound" style="display:none;margin:0;">
+              <label class="col-md-8 fs-5">Matching learning rate lower bound</label>
+              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingLearningRateLowerBound"  >
+              </p>
 
               </div>
 
             </div>
           </div>
+
           
           <br>
         
@@ -219,52 +287,27 @@
               <div id = "module_initializing">
                 <label class="col-md-8 fs-4">Initializing.</label>
                 <label class="col-md-8 fs-5">Rule</label>
-                <select id="select_initializingRule" name="initializingRule" method="GET"  style="font-size:20px;" onclick="showInitializingParameters()"> 
+                <select class="form-select-lg mb-1" id="select_initializingRule" name="initializingRule" method="GET"  style="font-size:20px;" onclick="showInitializingParameters()"> 
                   <option value= "LinearRegression" >LinearRegression</option>
                   <option value= "Disabled" SELECTED>Disabled</option>
                 </select>
 
                 <p id = "regressionParameters" style="display:none">
                   <label class="col-md-8 fs-5">Initializing number</label>
-                  <input type="text" id="initializingNumber" name="initializingNumber" >
+                  <input class="form-control-sm" type="text" id="initializingNumber" name="initializingNumber" >
                   <label class="col-md-8 fs-5">Initializing learning goal</label>
-                  <input type="text" id="initializingLearningGoal" name="initializingLearningGoal"  >
+                  <input class="form-control-sm" type="text" id="initializingLearningGoal" name="initializingLearningGoal"  >
                 </p>
 
                 <br><br>
                 <label class="col-md-8 fs-4">Selecting.</label>
                 <label class="col-md-8 fs-5">Rule</label>
-                <select name="selectingRule" method="GET"  style="font-size:20px;" > 
+                <select class="form-select-lg mb-1" name="selectingRule" method="GET"  style="font-size:20px;" > 
                   <option value= "POS" >POS</option>
                   <option value= "LTS" >LTS</option>
                   <option value= "Disabled" SELECTED>Disabled</option>
                 </select>
               </div>
-
-            </div>
-          </div>
-
-          <br>
-
-          <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
-
-              <label class="col-md-8 fs-4">Matching.</label>
-              <label class="col-md-8 fs-5">Rule</label>
-              <select id="select_matchingRule" name="matchingRule" method="GET" style="font-size:20px;" onclick="showMatchingParameters()"> 
-                <option value= "EU_LG" >EU_LG</option>
-                <option value= "EU_LG_UA" >EU_LG_UA</option>
-                <option value= "Disabled" SELECTED>Disabled</option>
-              </select>
-
-              <p id = "p_matchingLearningGoal" style="display:none">
-              <label class="col-md-8 fs-5">Matching learning goal</label>
-              <input type="text" id="Hyperparameters" name="matchingLearningGoal"  >
-              </p>  
-              <p id = "p_matchingLearningRateLowerBound" style="display:none">
-              <label class="col-md-8 fs-5">Matching learning rate lower bound</label>
-              <input type="text" id="Hyperparameters" name="matchingLearningRateLowerBound"  >
-              </p>
 
             </div>
           </div>
@@ -276,7 +319,7 @@
 
               <label class="col-md-8 fs-4">Cramming.</label>
               <label class="col-md-8 fs-5">Rule</label>
-              <select name="crammingRule" method="GET"  style="font-size:20px;" > 
+              <select class="form-select-lg mb-1" name="crammingRule" method="GET"  style="font-size:20px;" > 
                 <option value= "ri_sro" SELECTED>ri_sro</option>
                 <option value= "ri_mro" >ri_mro</option>
                 <option value= "bi_sro" >bi_sro</option>
@@ -298,7 +341,7 @@
 
               <label class="col-md-8 fs-4">Reorganizing.</label>
               <label class="col-md-8 fs-5">Rule</label>
-              <select id="reorganizingRule" name="reorganizingRule" method="GET"  style="font-size:20px;" onclick="showReorganzingingParameters()"> 
+              <select class="form-select-lg mb-1" id="reorganizingRule" name="reorganizingRule" method="GET"  style="font-size:20px;" onclick="showReorganzingingParameters()"> 
                 <option value= "ri_sro" SELECTED>ri_sro</option>
                 <option value= "ri_mro" >ri_mro</option>
                 <option value= "bi_sro" >bi_sro</option>
@@ -312,13 +355,13 @@
 
               <p id = "reorganizingParamaters" style="display:none">
                 <label class="col-md-8 fs-5">Regularizing times</label>
-                <input type="text" id="Hyperparameters" name="regularizingTimes"  >
+                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingTimes"  >
                 <label class="col-md-8 fs-5">Regularizing strength</label>
-                <input type="text" id="Hyperparameters" name="regularizingStrength"  >
+                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingStrength"  >
                 <label class="col-md-8 fs-5">Regularizing learning goal</label>
-                <input type="text" id="Hyperparameters" name="regularizingLearningGoal"  >
+                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingLearningGoal"  >
                 <label class="col-md-8 fs-5">Regularizing learning rate lower bound</label>
-                <input type="text" id="Hyperparameters" name="regularizingLearningRateLowerBound"  >
+                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingLearningRateLowerBound"  >
               </p>
 
             </div>
@@ -327,8 +370,8 @@
           <br><br>
 
           <label class="col-md-8 fs-5"></label>
-          <label for="define_model" class="btn btn-primary btn-lg">Train</label>
-          <input type="submit" id="define_model" class="btn btn-primary btn-lg" formaction="/pipeline/model/scenario/2" hidden>
+          <label for="define_model" class="btn btn-outline-primary btn-lg">Train</label>
+          <input class="form-control-sm" type="submit" id="define_model" class="btn btn-outline-primary btn-lg" formaction="/pipeline/model/scenario/2" hidden>
           <br><br>
 
           <div class="col-md-12">
