將啟用/停用置中

--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -137,22 +137,17 @@
         <form  method="post" enctype="multipart/form-data">
 
           <div class="row">
-            <div class="col-md-2">
-              <!-- <div class="d-flex align-items-center justify-content-center"> -->
-              <div class="row align-items-start">
+            <div class="col-md-2 d-flex justify-content-center align-items-center">
 
                 <div class="btn-group-toggle" data-toggle="buttons">
 
-                    <div class="btn-group" role="group" aria-label="Basic example" >
+                    <div id="test_1"class="btn-group" role="group" aria-label="Basic example" >
 
-                      <button type="button" class="btn btn-outline-primary">Enable</button>
-                      <button type="button" class="btn btn-outline-primary">Disable</button>
+                      <button id = "test_e" type="button" class="btn btn-outline-primary" onclick="">Enable</button>
+                      <button id = "test_d" type="button" class="btn btn-outline-primary" onclick="">Disable</button>
 
                     </div>
-                    
                 </div>
-                
-              </div>
             </div>
 
             <div class="col-md-10">
