實作div遮罩成功，另外把舊註解清掉

--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -131,6 +131,11 @@
         
         <form  method="post" enctype="multipart/form-data">
 
+          <!-- <div >
+            <div id="data_mask"class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
+            </div>
+          </div> -->
+          
           <div class="row">
             <div class="col-md-2 d-flex justify-content-center align-items-center">
 
@@ -138,64 +143,48 @@
 
                     <div id="test_1"class="btn-group" role="group" aria-label="Basic example" >
 
-                      <button id = "test_e" type="button" class="btn btn-outline-primary" onclick="btntest()">Enable</button>
+                      <button id = "test_e" type="button" class="btn btn-outline-primary" onclick="btntest('test_e')">Enable</button>
                       <button id = "test_d" type="button" class="btn btn-outline-primary" onclick="btntest()">Disable</button>
 
                     </div>
+
                 </div>
             </div>
 
-            <div id="data_cell" class="col-md-10">
-              <div class="h-100 p-5 bg-light border rounded-3">
-                
-              <label class="col-md-8 fs-4">Select Data directory from Server.</label>
+            <div class="col-md-10">
+              <div id="data_mask"class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
+                  <div class="h-100 p-5 bg-light border rounded-3">
+                    
+                    <label class="col-md-8 fs-4">Select Data directory from Server.</label>
 
-              <!-- <select class="form-select-lg mb-1" name="dataDirectory" method="GET"  style="font-size:20px;" >
-                {% for dataDir in upload_data %}
-                <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
-                {% endfor %}
-              </select> -->
+                    <div class="form-floating mb-3">
+                      <select class="form-control" id="select_data" placeholder="10" name="dataDirectory" method="GET"  style="font-size:20px;"> 
+                        {% for dataDir in upload_data %}
+                        <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
+                        {% endfor %}
+                      </select>
+                      <label for="select_data">Data directory</label>
+                    </div>
 
-              <div class="form-floating mb-3">
-                <select class="form-control" id="select_data" placeholder="10" name="dataDirectory" method="GET"  style="font-size:20px;"> 
-                  {% for dataDir in upload_data %}
-                  <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
-                  {% endfor %}
-                </select>
-                <label for="select_data">Data directory</label>
-              </div>
-
-              <div class="form-floating mb-3">
-                <select class="form-control" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:20px;"> 
-                  <option value= "ri_sro" SELECTED>ri_sro</option>
-                  <option value= "ri_mro" >ri_mro</option>
-                  <option value= "bi_sro" >bi_sro</option>
-                  <option value= "bi_mro" >bi_mro</option>
-                  <option value= "ri_sbo" >ri_sbo</option>
-                  <option value= "ri_mbo" >ri_mbo</option>
-                  <option value= "bi_sbo" >bi_sbo</option>
-                  <option value= "bi_mbo" >bi_mbo</option>
-                </select>
-                <label for="select_activationFunction">Data descirbing</label>
-              </div>
-
-              <!-- <label class="col-md-8 fs-5">Data descirbing</label>
-              <select class="form-select-lg mb-1" name="dataDescribing" method="GET"  style="font-size:20px;" > 
-                <option value= "ri_sro" SELECTED>ri_sro</option>
-                <option value= "ri_mro" >ri_mro</option>
-                <option value= "bi_sro" >bi_sro</option>
-                <option value= "bi_mro" >bi_mro</option>
-                <option value= "ri_sbo" >ri_sbo</option>
-                <option value= "ri_mbo" >ri_mbo</option>
-                <option value= "bi_sbo" >bi_sbo</option>
-                <option value= "bi_mbo" >bi_mbo</option>
-              </select> -->
-
+                    <div class="form-floating mb-3">
+                      <select class="form-control" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:20px;"> 
+                        <option value= "ri_sro" SELECTED>ri_sro</option>
+                        <option value= "ri_mro" >ri_mro</option>
+                        <option value= "bi_sro" >bi_sro</option>
+                        <option value= "bi_mro" >bi_mro</option>
+                        <option value= "ri_sbo" >ri_sbo</option>
+                        <option value= "ri_mbo" >ri_mbo</option>
+                        <option value= "bi_sbo" >bi_sbo</option>
+                        <option value= "bi_mbo" >bi_mbo</option>
+                      </select>
+                      <label for="select_activationFunction">Data descirbing</label>
+                    </div>
+                    
+                  </div>
               </div>
             </div>
-            
           </div>
-    
+          
 
           <br>
 
@@ -216,13 +205,6 @@
                 </select>
                 <label for="select_activationFunction">Activation function</label>
               </div>
-
-              <!-- <label class="col-md-8 fs-5">Hidden node</label>
-              <input class="form-control-sm" class="form-control-sm" type="text" id="Hyperparameters" name="hiddenNode" > -->
-              <!-- <label class="col-md-8 fs-5">Activation function</label>
-              <select class="form-select-lg mb-1" id="select_activationFunction" name="activationFunction" method="GET"  style="font-size:20px;"> 
-                <option value= "ReLU" SELECTED>ReLU</option>
-              </select> -->
               
               <label class="col-md-8 fs-5">---Evaluating---</label>
               <div class="form-floating mb-3">
@@ -230,8 +212,6 @@
                 <input type="text" class="form-control" id="floatingInput" placeholder="10" name="thresholdForError">
                 <label for="floatingInput">Threshold for error</label>
               </div>
-              <!-- <label class="col-md-8 fs-5">Threshold for error</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="thresholdForError" > -->
 
             </div>
           </div>
@@ -252,13 +232,6 @@
                 <label for="select_loss">Loss function</label>
               </div>
 
-              <!-- <label class="col-md-8 fs-5">---Loss function---</label>
-              <select class="form-select-lg mb-1" id="select_loss" name="lossFunction" method="GET"  style="font-size:20px;" onclick="showLossFunctionEquation()"> 
-                <option value= "RMSE" SELECTED>RMSE</option>
-                <option value= "MSE" >MSE</option>
-                <option value= "CROSSENTROPYLOSS" >CROSSENTROPYLOSS</option>
-              </select> -->
-
               <div>
                 <label class="col-md-8 fs-5">Function equation</label>
                 <p id="MSE" style="display:none"><span class="math display">\[MSE=\frac{1}{n}\sum_{i=1}^{n}(\hat{y_i}-y_i)^2\]</span ></p>
@@ -276,13 +249,6 @@
                 </select>
                 <label for="select_optim">Optimizer</label>
               </div>
-
-              <!-- <label class="col-md-8 fs-5">---Optimizer---</label>
-              <select class="form-select-lg mb-1" name="optimizer" method="GET"  style="font-size:20px;" onclick="showOptimizerParameters()" > 
-                <option value= "Adam" SELECTED>Adam</option>
-                <option value= "AdamW" >AdamW</option>
-              </select> -->
-
 
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="10" name="learningRate">
@@ -304,15 +270,6 @@
                 <label for="floatingInput">Weight decay</label>
               </div>
 
-
-              <!-- <label class="col-md-8 fs-5">Learning rate</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="learningRate" >
-              <label class="col-md-8 fs-5">Betas</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="betas" >
-              <label class="col-md-8 fs-5">Eps</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="eps" >
-              <label class="col-md-8 fs-5">Weight decay</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="weightDecay" > -->
               
               <br><br>
 
@@ -326,14 +283,7 @@
                 <label for="select_matchingRule">Matching rule</label>
               </div>
 
-              
-              <!-- <label class="col-md-8 fs-5">---Rule---</label>
-              <select class="form-select-lg mb-1" id="select_matchingRule" name="matchingRule" method="GET" style="font-size:20px;" onclick="showMatchingParameters()"> 
-                <option value= "EU" >EU</option>
-                <option value= "EU_LG" >EU_LG</option>
-                <option value= "EU_LG_UA" >EU_LG_UA</option>
-                <option value= "Disabled" SELECTED>Disabled</option>
-              </select> -->
+
 
               <div class="form-floating mb-3" id = "p_matchingTimes" style="display:none;margin:0;">
                 <input type="text" class="form-control" id="floatingInput" placeholder="10" name="matchingTimes">
@@ -350,20 +300,6 @@
                 <label for="floatingInput">Matching learning rate lower bound</label>
               </div>
 
-              <!-- <p id = "p_matchingTimes" style="display:none;margin:0;">
-              <label class="col-md-8 fs-5">Matching times</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingTimes"  >
-              </p> 
-
-              <p id = "p_matchingLearningGoal" style="display:none;margin:0;">
-              <label class="col-md-8 fs-5">Matching learning goal</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingLearningGoal"  >
-              </p> 
-
-              <p id = "p_matchingLearningRateLowerBound" style="display:none;margin:0;">
-              <label class="col-md-8 fs-5">Matching learning rate lower bound</label>
-              <input class="form-control-sm" type="text" id="Hyperparameters" name="matchingLearningRateLowerBound"  >
-              </p> -->
 
               </div>
 
@@ -386,14 +322,6 @@
                 <label for="select_initializingRule">Initializing rule</label>
               </div>
 
-              <!-- <div id = "module_initializing">
-                <label class="col-md-8 fs-4">Initializing.</label>
-                <label class="col-md-8 fs-5">Rule</label>
-                <select class="form-select-lg mb-1" id="select_initializingRule" name="initializingRule" method="GET"  style="font-size:20px;" onclick="showInitializingParameters()"> 
-                  <option value= "LinearRegression" >LinearRegression</option>
-                  <option value= "Disabled" SELECTED>Disabled</option>
-                </select> -->
-
                 <div id = "regressionParameters" style="display:none;margin:0;">
                   <div class="form-floating mb-3"  >
                     <input type="text" class="form-control" id="floatingInput" placeholder="10" name="initializingNumber">
@@ -405,15 +333,6 @@
                     <label for="floatingInput">Initializing learning goal</label>
                   </div>
                 </div>
-
-                <!-- 
-
-                <p id = "regressionParameters" style="display:none">
-                  <label class="col-md-8 fs-5">Initializing number</label>
-                  <input class="form-control-sm" type="text" id="initializingNumber" name="initializingNumber" >
-                  <label class="col-md-8 fs-5">Initializing learning goal</label>
-                  <input class="form-control-sm" type="text" id="initializingLearningGoal" name="initializingLearningGoal"  >
-                </p> -->
 
                 <br><br>
                 <label class="col-md-8 fs-4">Selecting.</label>
@@ -449,18 +368,6 @@
                 </select>
                 <label for="select_crammingRule">Selecting rule</label>
               </div>
-              <!-- <label class="col-md-8 fs-5">Rule</label>
-              <select class="form-select-lg mb-1" name="crammingRule" method="GET"  style="font-size:20px;" > 
-                <option value= "ri_sro" SELECTED>ri_sro</option>
-                <option value= "ri_mro" >ri_mro</option>
-                <option value= "bi_sro" >bi_sro</option>
-                <option value= "bi_mro" >bi_mro</option>
-                <option value= "ri_sbo" >ri_sbo</option>
-                <option value= "ri_mbo" >ri_mbo</option>
-                <option value= "bi_sbo" >bi_sbo</option>
-                <option value= "bi_mbo" >bi_mbo</option>
-                <option value= "Disabled" SELECTED>Disabled</option>
-              </select> -->
 
             </div>
           </div>
@@ -486,19 +393,6 @@
                 <label for="select_reorganizingRule">Reorganizing rule</label>
               </div>
 
-              <!-- <label class="col-md-8 fs-5">Rule</label>
-              <select class="form-select-lg mb-1" id="select_reorganizingRule" name="reorganizingRule" method="GET"  style="font-size:20px;" onclick="showReorganzingingParameters()"> 
-                <option value= "ri_sro" SELECTED>ri_sro</option>
-                <option value= "ri_mro" >ri_mro</option>
-                <option value= "bi_sro" >bi_sro</option>
-                <option value= "bi_mro" >bi_mro</option>
-                <option value= "ri_sbo" >ri_sbo</option>
-                <option value= "ri_mbo" >ri_mbo</option>
-                <option value= "bi_sbo" >bi_sbo</option>
-                <option value= "bi_mbo" >bi_mbo</option>
-                <option value= "Disabled" SELECTED>Disabled</option>
-              </select> -->
-
               <div id = "reorganizingParamaters" style="display:none;margin:0;">
                 <div class="form-floating mb-3"  >
                   <input type="text" class="form-control" id="floatingInput" placeholder="10" name="regularizingTimes">
@@ -520,18 +414,6 @@
                   <label for="floatingInput">Regularizing learning rate lower bound</label>
                 </div>
               </div>
-
-
-              <!-- <p id = "reorganizingParamaters" style="display:none">
-                <label class="col-md-8 fs-5">Regularizing times</label>
-                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingTimes"  >
-                <label class="col-md-8 fs-5">Regularizing strength</label>
-                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingStrength"  >
-                <label class="col-md-8 fs-5">Regularizing learning goal</label>
-                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingLearningGoal"  >
-                <label class="col-md-8 fs-5">Regularizing learning rate lower bound</label>
-                <input class="form-control-sm" type="text" id="Hyperparameters" name="regularizingLearningRateLowerBound"  >
-              </p> -->
 
             </div>
           </div>
